<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitulo1"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/form_titulo1"
        android:textColor="@color/cinza"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/form_titulo2"
        android:textColor="@color/verde_claro"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_box"
        android:elevation="4dp"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="8dp"
        android:text="@string/form_text"
        android:textColor="@color/verde_escuro"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/imgLixeira"
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/lixeira"
        android:padding="16dp"
        android:src="@drawable/lixo" />

    <android.webkit.WebView
        android:id="@+id/webView"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/botao"
        android:elevation="4dp"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="10dp"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:visibility="visible" />

</LinearLayout>
